tmp-dev-full/objects/GdPointRefreshRun__c/GdPointRefreshRun__c.object-meta.xml
<CustomObject>
    <label>Point Refresh Run</label>
    <nameField>
        <displayFormat>PRR-{000000}</displayFormat>
        <label>Point Refresh Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>