tmp-dev-full/objects/GdPointRefreshRun__c/fields/CleanupAfter__c.field-meta.xml
<CustomField>
    <fullName>CleanupAfter__c</fullName>
    <label>Cleanup After</label>
    <type>DateTime</type>
</CustomField>