tmp-dev-full/objects/GdPointRefreshRun__c/fields/CurrentStep__c.field-meta.xml
<CustomField>
    <fullName>CurrentStep__c</fullName>
    <label>Current Step</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>