tmp-dev-full/objects/GdPointRefreshRun__c/fields/DryRun__c.field-meta.xml
<CustomField>
    <fullName>DryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dry Run</label>
    <type>Checkbox</type>
</CustomField>