tmp-dev-full/objects/GdPointRefreshRun__c/fields/EventCount__c.field-meta.xml
<CustomField>
    <fullName>EventCount__c</fullName>
    <label>Event Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>