tmp-dev-full/objects/GdPointRefreshRun__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <label>Member Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>