tmp-dev-full/objects/GdPointRefreshRun__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <label>Member No</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>