tmp-dev-full/objects/GdPointRefreshRun__c/fields/MigrationCutoffDateTime__c.field-meta.xml
<CustomField>
    <fullName>MigrationCutoffDateTime__c</fullName>
    <label>Migration Cutoff DateTime</label>
    <type>DateTime</type>
</CustomField>