tmp-dev-full/objects/GdPointRefreshRun__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <label>Open Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>