tmp-dev-full/objects/GdPointRefreshRun__c/fields/UseCreatedDateCutoff__c.field-meta.xml
<CustomField>
    <fullName>UseCreatedDateCutoff__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use CreatedDate Cutoff</label>
    <type>Checkbox</type>
</CustomField>